[FIX] Fix backdrop filters not showing if fade in anim set to parent

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -149,6 +149,10 @@ header {
   transition: 0.75s ease-in-out;
 }
 
+.fade-in-debug {
+  animation: fade-in 0.3s ease-in-out;
+}
+
 .fade-in {
   opacity: 0;
   animation: fade-in 0.3s ease-in-out forwards;
