--- a/src/modules/upload/components/FileInput/styles.module.scss
+++ b/src/modules/upload/components/FileInput/styles.module.scss
@@ -15,6 +15,17 @@
   transition: transform 0.35s ease-in-out;
   position: relative;
 
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(10px);
+    z-index: -1;
+  }
+
   p {
     position: absolute;
     bottom: 0%;
